--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ a {
       width: 178px;
       border: 2px solid #c6c6c6;
       border-radius: 5px;
-      text-align: center;
+			padding-left: 15px;
     }
     .class-search-img {
       position: absolute;
@@ -215,6 +215,7 @@ a {
     }
     .class-content .line .line-img {
       margin: 25px 20px 25px 30px;
+      cursor: pointer;width: 100px;height: 140px;
     }
     .class-content .line .line-content {
       width: 765px;
@@ -238,6 +239,7 @@ a {
       color: #00a1d6;
       font-size: 22px;
       margin-top: 25px;
+      cursor: pointer;
     }
     .class-content .line .line-content .div {
       margin-top: 20px;  
@@ -253,7 +255,7 @@ a {
       		border-top: 1px solid #999999;
       		width: 895px;
       		margin: 0 auto;
-      		margin-top: 20px;
+      		margin-top: 40px;
       	}
       	.line-vertical * {
       		overflow: initial;
@@ -289,8 +291,8 @@ a {
 			    -webkit-transition: opacity .3s ease;
 			    transition: opacity .3s ease;
 			    border-radius: 4px;
-			    
-      	}
+			    cursor: pointer;
+			  }
       	.class-content .line-vertical .vertical-img .vertical-img-line:hover{
       		filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     			opacity: 1;
@@ -358,13 +360,16 @@ a {
     		.class-content .line-vertical .vertical-title {
       		padding-top: 12px;
 			    width: 150px;
-			    height: 35px;
-			    font-size: 22px;
+			    height: 60px;
+			    font-size: 18px;
 			    text-align: center;
 			    margin: 0 auto;
+			    cursor: pointer;
+			    /*
 			    overflow: hidden;
 			    text-overflow: ellipsis;
 			    white-space: nowrap;
+			    */
       	}
       	.class-body {
       		background-color: #FFFFFF;
