--- a/view/catalog.html
+++ b/view/catalog.html
@@ -27,8 +27,9 @@
 					<li style="width: 200px">更新: <span style="color:#7e7e7e;">{{szxj.getLocalTime(update / 1000) }}</span></li>
 				</ul>
 				<div class="text_brief">
-						<p class="text_brief_p" title="{{introduction}}">简介：{{introduction}}</p>
-						
+						<p class="text_brief_p" title="{{introduction}}">简介：
+							<span style="font-size: 12px;">{{introduction}}</p>
+						</span>
 					<div class="text_type" >
 						<ul>
 							<li>分类：</li>
@@ -111,7 +112,13 @@
 						</ul>
 					</div>
 					<div class="text_Reply">
-						
+						<div class="text_Reply_uesr">		
+							<img src=" ../img/sss8.jpg"> 			
+						    <div class="text_Reply_uesr_name" >
+						    	<a>huhuf5</a>:<span>许为知己犹按剑，纵使负心敌难为。</span>
+						    </div>
+						    <span>8月6日</span> 12：31
+						</div>
 					</div>
 					<div class="Reply_Underline"></div>
 				</div>
