--- a/view/ranking.html
+++ b/view/ranking.html
@@ -213,4 +213,12 @@
 	<script type="text/javascript" src="../js/components/header.js" ></script>
 	<script type="text/javascript" src="../js/components/footer.js" ></script>
 	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>	
+	<script>
+		var indexHtml = new Vue({
+			el: '#app',
+			data: {
+				path: PathList,
+			},
+		})
+	</script>
 </html>
