--- a/css/catalog.css
+++ b/css/catalog.css
@@ -363,8 +363,8 @@
 	}
 		.index .text_brief {
 			width: 472px;
-			height: 100px;
-			border-bottom: 1px dashed #999;
+			height: 120px;
+			border-bottom: 1px dashed #E1E1E1;
 			margin-top: 15px;
 		}	
 		.index .text_brief .text_brief_p {
@@ -373,7 +373,7 @@
 		    display: -webkit-box;
 		    -webkit-line-clamp: 3;
 		    -webkit-box-orient: vertical;
-		    height: 100px;
+		    height: 112px;
 		    
 		}
 		.index .text_type {
@@ -692,72 +692,34 @@
 			margin: -7px 0 0 33px;
 			
 		}
-		.index .text_Reply img {
-			width: 31px;
-			height: 31px;
-			margin: 16px 0px 0 28px;
+		.index .text_Reply .text_Reply_uesr img{
+			margin: 15px 0  0 20px;
+			vertical-align: middle;
+			width: 45px;
+			height: 45px;
 		}
-		.index .text_Reply .Reply_ul {
-			width: 450px;
-			height: 20px;
-			float: left;
+		.index .text_Reply .text_Reply_uesr .text_Reply_uesr_name {
+			display: inline-block;
+			
+		}
+		.index .text_Reply .text_Reply_uesr .text_Reply_uesr_name  {
+		
+		}
+        .index .text_Reply .text_Reply_uesr .text_Reply_uesr_name a {
+        	margin-left: 10px ;
+          	color: #169BD5;
+          	margin-right: 5px ;
+          	
+        }
+        .index .text_Reply .text_Reply_uesr .text_Reply_uesr_name span {
+        	margin-left: 5px ;
+        	font-size: 15px;
+        }
+		.index .text_Reply .text_Reply_uesr .text_Reply_updata {
+			display: inline-block;
+		}
 
-		}
-		.index .text_Reply .Reply_ul li {
-			width: 60px;
-			margin: 0 0 0 6px;
-		}
-		.index .text_Reply .Reply_ul .Reply_li {
-			width: 35px;
-		}
-		.index .text_Reply .Reply_ul .Reply_a {
-			width: 100px;
-			height: 20px;
-			color: #4d99e9;
-		}
-		.index .text_Reply .Reply_ul .Reply_span {
-			display: block;
-			width: 350px;
-		}
-		.index .text_Reply .Reply_time  {
-			width: 592px;
-			height: 20px;
-			margin: 2px 0px 0 17px;
-			text-align: center;
-			border-bottom: 1px dashed #cbcbcb ;
-		}
-		.index .text_Reply .Reply_time li{
-			width: 47px;
-			font-size: 9px;
-			color: #808080;
-			float: right;
-		}
-		.index .text_Reply .Reply_See {
-			width: 594px;
-			height: 20px;
-			float: right;
-			margin: 21px 11px 0 0;
-		}
-		.index .text_Reply a  {
-			float: left;
-		}
-		.index .text_Reply .Reply_See span {
-			cursor: pointer;
-			color: #7eb2ec;
-			cursor: pointer;
-		}
-		.index .text_Reply  .See_li {
-			width: 65px;
-			height: 16px;
-			line-height: 16px;
-			float: right;
-			text-align: center;
-			font-size: 11px;
-			background-color: #FFFFFF;
-			margin: -20px 21px 0 0;
-			border-radius: 8px;
-			color: #000000;
-		}
+
 		.index .text_user .Reply_Underline {
 			margin: 29px 0 0 0;
 			border-bottom: 1px solid #d5d5d5;
