--- a/view/catalog.html
+++ b/view/catalog.html
@@ -112,12 +112,12 @@
 						</ul>
 					</div>
 					<div class="text_Reply">
-						<div class="text_Reply_uesr">		
-							<img src=" ../img/sss8.jpg"> 			
+						<div  class="text_Reply_user">
+							<div class="text_Reply_uesr_img"></div>		
 						    <div class="text_Reply_uesr_name" >
-						    	<a>huhuf5</a>:<span>许为知己犹按剑，纵使负心敌难为。</span>
+						    	<div class="text_Reply_content"><a>huhuf5</a>:<span>许为知己犹按剑，纵使负心敌难为。</span></div>
+						    	<div class="text_Reply_content_time"><span>8月6日12：31</span></div>
 						    </div>
-						    <span>8月6日</span> 12：31
 						</div>
 					</div>
 					<div class="Reply_Underline"></div>
