--- a/view/ranking.html
+++ b/view/ranking.html
@@ -219,6 +219,18 @@
 			data: {
 				path: PathList,
 			},
-		})
+			methods: {
+				getValueFn: function() {
+					    var _data = {};
+			        SZXJ.http('get', PathList.getIndexData, _data, (response) => {
+			        
+			        	console.log(response);
+			        });
+  				},
+			},
+			ready: function() {
+		        this.getValueFn();
+			},
+		});
 	</script>
 </html>
