--- a/css/index.css
+++ b/css/index.css
@@ -170,10 +170,14 @@
 		height: 213px;
 		float: right;
 	}
+	.index .main .main_title .main_picture .display a img {
+		width: 128px;
+		height: 174px;
+	}
 	
 	.index .main .main_title .main_picture figure {
 		width: 125px;
-		height: 173px;
+		height: 225px;
 		margin: 10px 3px 0 3px;
 		float: right;
 	}
@@ -186,6 +190,7 @@
 	    -webkit-line-clamp: 2;
 	    -webkit-box-orient: vertical;
 	    
+	    
 	}
 	.index .main .main_title .main_pictu {
 		margin-top: 16px;
@@ -193,6 +198,7 @@
 		height: 213px;
 		float: right;
 	}
+
 	
 	.index .main .main_title .main_pictu figure {
 		width: 125px;
@@ -394,11 +400,16 @@
 		width: 534px;
 		height: 213px;
 		float: right;
+		
+	}
+	.index .secon .secon_title .secon_picture .display a img {
+		width: 128px;
+		height: 174px;
 	}
 	
 	.index .secon .secon_title .secon_picture figure {
 		width: 125px;
-		height: 173px;
+		height: 225px;
 		margin: 10px 3px 0 3px;
 		float: right;
 	}
@@ -410,6 +421,7 @@
 	    display: -webkit-box;
 	    -webkit-line-clamp: 2;
 	    -webkit-box-orient: vertical;
+	   
 	    
 	}
 	.index .secon .secon_title .secon_pictu {
@@ -782,9 +794,14 @@
 	}
 	.index  .display:hover .details_img{
 		-webkit-filter:blur(2px);
+		
 	}
 	.index  .display {
 		position: relative;
+	}
+	.index  .display a img {
+		width: 157px;
+		height: 236px;
 	}
 	.index  .hide {
 		width: 161px;
