--- a/css/ranking.css
+++ b/css/ranking.css
@@ -174,6 +174,8 @@
 		display: block;
 		padding: 38px 28px 0 0px;
 		float: left;
+		width: 100px;
+		height: 140px;
 	}
 	#content .content_ranking ul {
 		width: 550px;
