--- a/view/ranking.html
+++ b/view/ranking.html
@@ -62,136 +62,20 @@
 	  			<li class="List_li">月排行</li>
 	  		</ul>
 	  	</div>
-	  	<div class="content_ranking active">
+	  	<div class="content_ranking active" v-for="obj in result">
 	  		<h1>1</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
+	  		<a href="javascript:;"><img src="../img/Cover-map.jpg" :src="path.rootPath + obj.bookCoverImage" @click="gotoBook(obj.bookId)"/></a>
 	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
+	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span @click="gotoBook(obj.bookId)">{{obj.bookName}}</span></a></li>
+	  			<li>作者：{{obj.author}}</li>
 	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
+	  			<li>点击：{{obj.bookHit}}</li>
+	  			<li>好人卡：{{obj.bookCopperCoins}}</li>
+	  			<li>字数：{{obj.bookWordCount}}</li>
 	  		</ul>
 	  		<a class="ranking_Collection" href="javascript:;">已收藏</a>
 	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>2</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>3</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>4</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>5</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>6</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>7</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>8</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  	<div class="content_ranking ">
-	  		<h1>9</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
-	  		<div class="content_ranking ">
-	  		<h1>10</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg"/></a>
-	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span>巴拉拉老魔仙</span></a></li>
-	  			<li>作者：huhuf5</li>
-	  			<li></li>
-	  			<li>点击：34.4万</li>
-	  			<li>好人卡：70万</li>
-	  			<li>字数：50万</li>
-	  		</ul>
-	  		<a class="ranking_Collection" href="javascript:;">点击收藏</a>
-	  	</div>
+
 	  </div>
 	  <div id="page" class="page">
 	      	<ul>
@@ -207,23 +91,30 @@
       	</div>
 	<myfooter></myfooter>
 	</body>
-    <script src="../js/apis/vueHttp.js"></script>
+	<script src="../js/apis/vueHttp.js"></script>
   	<script src="../js/apis/conf.js"></script>
 	<script type="text/javascript" src="../js/vue.min.js" ></script>
-	<script type="text/javascript" src="../js/components/header.js" ></script>
-	<script type="text/javascript" src="../js/components/footer.js" ></script>
-	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>	
+	<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
+ 	<script type="text/javascript" src="../js/vue-router.min.js" ></script>
+    <script type="text/javascript" src="../js/components/header.js" ></script>
+    <script type="text/javascript" src="../js/components/footer.js" ></script>
+    <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
 	<script>
 		var indexHtml = new Vue({
 			el: '#app',
 			data: {
 				path: PathList,
+				result:[],
+				
 			},
 			methods: {
+				gotoBook: function(id) {
+					location.href = this.path.TemprootPath + '/view/catalog.html?bookId=' + id;
+				},
 				getValueFn: function() {
 					    var _data = {};
-			        SZXJ.http('get', PathList.getIndexData, _data, (response) => {
-			        
+			        SZXJ.http('get', PathList.getRankingList, _data, (response) => {
+			        	this.result=response.data.result
 			        	console.log(response);
 			        });
   				},
