--- a/view/register.html
+++ b/view/register.html
@@ -60,6 +60,14 @@
 <script type="text/javascript" src="../js/jquery.validate.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
 <script>
+
+var indexHtml = new Vue({
+      el: '#app',
+      data: {
+        path: PathList,
+      },
+    });
+
 "use strict"
 $(function() {
 
