--- a/view/catalog.html
+++ b/view/catalog.html
@@ -331,8 +331,7 @@
 				booktTitle:[],
 			},
 			methods: {
-				
-			  nextWorksFn:function() {
+				nextWorksFn:function() {
 			    // <--
           this.zindex--;
           if (Math.abs(this.zindex) >= (this.booktTitle.length - 3)) {
@@ -381,11 +380,12 @@
 			},
 			ready: function() {
 			  var href = window.location.href;
-
-		        this.id = href.substring(href.lastIndexOf('?bookId=') + 8, href.length); 
-		   	     var str = this.id.toString();
-			     	   if (str.search('\[^0-9]\g') === -1) {
-			           this.getValueFn();
+        this.id = href.substring(href.lastIndexOf('?bookId=') + 8, href.length); 
+	      var str = this.id.toString();
+	      if (str.search(/[^0-9]/g) === -1) {
+			    this.getValueFn();
+        } else {
+			   window.location.href = PathList.TemprootPath + '/index.html';
         }
 			},
 		});
