--- a/view/ranking.html
+++ b/view/ranking.html
@@ -3,109 +3,152 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>轻创文学网-排行榜</title>
-		
-    <link rel="stylesheet" href="../css/ranking.css" />
-	<link rel="stylesheet" href="../css/headerOrFooter.css" />
-	<link rel="stylesheet" href="../css/main.css" />
-	<link rel="stylesheet" href="../css/LOgin.css" />
-	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+  	<link rel="stylesheet" href="../css/ranking.css" />
+  	<link rel="stylesheet" href="../css/headerOrFooter.css" />
+  	<link rel="stylesheet" href="../css/main.css" />
+  	<link rel="stylesheet" href="../css/LOgin.css" />
+  	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>
 	<body id="app">
 	  <myheader></myheader>
 	  <div id="background"></div>
 	  <div id="Title">
 	  	<ul>
-	  		<li><a class="Title_a" href="javascript:;">好人榜</a></li>
-	  		<li><a class="Title_a" href="javascript:;">字数榜</a></li>
-	  		<li><a class="Title_a" href="javascript:;">点击榜</a></li>
+	  		<li :class="RequestObj.rankList === 0?'active':''" @click="setRankList(0)"><a class="Title_a" href="javascript:;">好人榜</a></li>
+	  		<li :class="RequestObj.rankList === 1?'active':''" @click="setRankList(1)"><a class="Title_a" href="javascript:;">字数榜</a></li>
+	  		<li :class="RequestObj.rankList === 2?'active':''" @click="setRankList(2)"><a class="Title_a" href="javascript:;">点击榜</a></li>
 	  	</ul>
 	  </div>
 	  <div id="content">
 	  	<div class="content_Label">
 		  	<ul>
-		  		<li class="active" :class="RequestObj.bookTypeId == obj.bookTypeId ? 'active': ''"  v-for="obj in bookInfo.sort">{{ obj.bookTypeName }}</li>
-		  		
+		  	  <li       
+            :class="RequestObj.bookTypeId == '' ? 'active': ''" @click="setbookTypeId('')">全部</li>
+		  		<li  @click="setbookTypeId(obj.bookTypeId)" :class="RequestObj.bookTypeId == obj.bookTypeId ? 'active': ''"  
+		  		  v-for="obj in bookInfo">{{ obj.bookTypeName }}</li>
 		  	</ul>
 	  	</div>
 	  	<div class="content_Draft">
 	  		<ul>
 	  			<img src="../img/arrow1.png"/>
-	  			<li>全部投稿</li>
-	  			<li class="content_li">近期投稿</li>
-	  			<li class="content_li">近期投稿</li>
-	  			<li class="content_li">近期投稿</li>
+	  			<li v-if="RequestObj.date == 0">近期投稿</li>
+          <li v-if="RequestObj.date == 1">全部投稿</li>
+	  			<li class="content_li" @click="setDate(0)">近期投稿</li>
+	  			<li class="content_li" @click="setDate(1)">全部投稿</li>
 	  		</ul>
 	  	</div>
 	  	<div class="content_List">
 	  		<ul>
-	  			
 	  			<img src="../img/arrow1.png"/>
-	  			<li>近日排行</li>
-	  			<li class="List_li">日排行</li>
-	  			<li class="List_li">周排行</li>
-	  			<li class="List_li">月排行</li>
+	  			<li v-if="RequestObj.timeRank == 0">周排行</li>
+	  			<li v-if="RequestObj.timeRank == 1">月排行</li>
+	  			<li v-if="RequestObj.timeRank == 2">总排行</li>
+	  			<li class="List_li" @click="setTimeRank(0)">周排行</li>
+	  			<li class="List_li" @click="setTimeRank(1)">月排行</li>
+	  			<li class="List_li" @click="setTimeRank(2)">总排行</li>
 	  		</ul>
 	  	</div>
 	  	<div class="content_ranking active" v-for="obj in result">
-	  		<h1>1</h1>
+	  		<h1>{{ $index + 1 }}</h1>
 	  		<a href="javascript:;"><img src="../img/Cover-map.jpg" :src="path.rootPath + obj.bookCoverImage" @click="gotoBook(obj.bookId)"/></a>
 	  		<ul>
-	  			<li><a href="javascript:;" class="content_a" title="巴拉拉老魔仙巴拉拉老魔仙巴拉拉老魔仙巴拉拉"><span @click="gotoBook(obj.bookId)">{{obj.bookName}}</span></a></li>
+	  			<li><a href="javascript:;" class="content_a" title="{{obj.bookName}}"><span @click="gotoBook(obj.bookId)">{{obj.bookName}}</span></a></li>
 	  			<li>作者：{{obj.author}}</li>
-	  			<li></li>
-	  			<li>点击：{{obj.bookHit}}</li>
-	  			<li>好人卡：{{obj.bookCopperCoins}}</li>
-	  			<li>字数：{{obj.bookWordCount}}</li>
+	  			<li><!-- 占位符 --></li>
+	  			<li v-if="RequestObj.timeRank === 0">点击：{{obj.everyWeekHit}}</li>
+	  			<li v-if="RequestObj.timeRank === 1">点击：{{obj.everyMonthHit}}</li>
+	  			<li v-if="RequestObj.timeRank === 2">点击：{{obj.bookHit}}</li>
+	  			
+	  			
+	  			
+          <li v-if="RequestObj.timeRank === 0">好人卡：{{obj.everyWeekCopperCoins}}</li>
+          <li v-if="RequestObj.timeRank === 1">好人卡：{{obj.everyMonthCopperCoins}}</li>
+          <li v-if="RequestObj.timeRank === 2">好人卡：{{obj.bookCopperCoins}}</li>
+          
+          
+	  			<li v-if="RequestObj.timeRank === 0">字数：{{obj.everyWeekWordCount}}</li>
+	  			<li v-if="RequestObj.timeRank === 1">字数：{{obj.everyMonthWordCount}}</li>
+	  			<li v-if="RequestObj.timeRank === 2">字数：{{obj.bookWordCount}}</li>
+	  			
 	  		</ul>
 	  		<a class="ranking_Collection" href="javascript:;">已收藏</a>
+	  		<a class="ranking_AddToCollection btn" href="javascript:;">添加收藏</a>
 	  	</div>
 
 	  </div>
 	 <div id="page" class="page">
-      	<ul>
-      		<li class="btn" @click="setPage((RequestObj.pageNo - 1) >= 1 ? (RequestObj.pageNo - 1) : 1)"><a>上一页</a></li>
-      		<li v-if="(($index + 1) <= 5 && RequestObj.pageNo < 3 || (($index + 1) > RequestObj.pageNo - 3 &&  $index < RequestObj.pageNo)) || ( (($index + 1) <= RequestObj.pageNo + 2 &&　($index + 1) > RequestObj.pageNo) || (RequestObj.pageNo > obj.pageCount - 3 && ($index + 6) > obj.pageCount) )"
-      			:class="objTemp == RequestObj.pageNo? 'active':''" v-for="objTemp in page" @click="setPage(objTemp)"><a>{{ objTemp }}</a></li>
-      		<li class="btn" @click="setPage((RequestObj.pageNo + 1) <= obj.pageCount ? (RequestObj.pageNo + 1) : obj.pageCount)"><a>下一页</a></li>
-      		<li class="goto">
-      			<input type="text" v-model="pageNo" style="text-align: center;"/>
-      			<span>{{ RequestObj.pageNo }}/{{ obj.pageCount }}</span>
-      			<a class="btn" @click="setPage(pageNo)">转页</a>
-      		</li>
-      	</ul>
-      </div>
+    <ul>
+      <li class="btn" @click="setPage((RequestObj.pageNo - 1) >= 1 ? (RequestObj.pageNo - 1) : 1)"><a>上一页</a></li>
+      <li v-if="(($index + 1) <= 5 && RequestObj.pageNo < 3 || (($index + 1) > RequestObj.pageNo - 3 &&  $index < RequestObj.pageNo)) || ( (($index + 1) <= RequestObj.pageNo + 2 &&　($index + 1) > RequestObj.pageNo) || (RequestObj.pageNo > obj.pageCount - 3 && ($index + 6) > obj.pageCount) )"
+      	:class="objTemp == RequestObj.pageNo? 'active':''" v-for="objTemp in page" @click="setPage(objTemp)"><a>{{ objTemp }}</a></li>
+      <li class="btn" @click="setPage((RequestObj.pageNo + 1) <= obj.pageCount ? (RequestObj.pageNo + 1) : obj.pageCount)"><a>下一页</a></li>
+      <li class="goto">
+      	<input type="text" v-model="pageNo" style="text-align: center;"/>
+      	<span>{{ RequestObj.pageNo }}/{{ obj.pageCount }}</span>
+      	<a class="btn" @click="setPage(pageNo)">转页</a>
+      </li>
+    </ul>
+  </div>
 	<myfooter></myfooter>
 	</body>
 	<script src="../js/apis/vueHttp.js"></script>
-  	<script src="../js/apis/conf.js"></script>
+  <script src="../js/apis/conf.js"></script>
 	<script type="text/javascript" src="../js/vue.min.js" ></script>
 	<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
  	<script type="text/javascript" src="../js/vue-router.min.js" ></script>
-    <script type="text/javascript" src="../js/components/header.js" ></script>
-    <script type="text/javascript" src="../js/components/footer.js" ></script>
-    <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
+  <script type="text/javascript" src="../js/components/header.js" ></script>
+  <script type="text/javascript" src="../js/components/footer.js" ></script>
+  <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
 	<script>
 		var indexHtml = new Vue({
 			el: '#app',
 			data: {
 				path: PathList,
 				result:[],	
-				pageNo: 1,
-				RequestObj: {
-					bookTypeId: '',
-				},
-			},
-			obj: {
-				 p: 1, // 页码
-				 n: 12,
-				 pageCount: 1,
+				bookInfo: [],
+				// 分页
+				page: [],
+        RequestObj: {
+          rankList: 0, // 好人 字数 点击
+          timeRank: 0, // 周 月 总
+          date: 0, // 0 近期 1远期
+          bookTypeId: '',
+          pageNo: 1,
+          pageSize: 12,
+        },
+				obj: {
+         p: 1, // 页码
+         n: 12,
+         pageCount: 1,
+        },
+        // 分页
 			},
 			methods: {
+			  setDate:function(v) {
+			    var Temp = this.RequestObj;
+          Temp.date = v;
+          this.$set('RequestObj', Temp)
+          this.getValueFn(); // 请求
+			  },
+			  setbookTypeId: function(v) {
+			    this.RequestObj.bookTypeId = v;
+			    this.getValueFn(); // 请求
+			  },
+			  setRankList: function(v) {
+          this.RequestObj.rankList = v;
+          this.getValueFn(); // 请求
+        },
+			  setTimeRank: function(v) {
+			    var Temp = this.RequestObj;
+          Temp.timeRank = v;
+          this.$set('RequestObj', Temp)
+          this.getValueFn(); // 请求
+        },
 				gotoBook: function(id) {
 					location.href = this.path.TemprootPath + '/view/catalog.html?bookId=' + id;
 				},
 				setPageCount: function(v) {
-						var obj = this.obj;
+					var obj = this.obj;
 	         			obj.pageCount =  v;
 	        			  this.page = [];
 	        		  for (var i = 0; i < obj.pageCount; i++) {
@@ -123,21 +166,29 @@
 					this.getValueFn(); // 请求
 				},
 				getValueFn: function() {
-					    var _data = {};
-			        SZXJ.http('get', PathList.getRankingList, _data, (response) => {
-			        	this.result=response.data.result;
-			        	console.log(response);
-			        });
-			        
-			        SZXJ.http('get', PathList.queryBookClass, _data, (response) => {
-			        	this.bookInfo=response.data.bookInfo;
-			        	console.log(response);
-			        });
-  				},
-  				
-			},
+				  this.result = [];
+			    SZXJ.http('get', PathList.getRankingList, this.RequestObj, (response) => {
+			      this.result = response.data.result;
+			      console.log(response);
+			      this.setPageCount(response.data.totalPage);
+			    });
+			    
+  		  },
+  		},
 			ready: function() {
-		        this.getValueFn();
+			  SZXJ.http('get', PathList.queryBookType, {}, (response) => {
+          this.bookInfo = response.data;
+        });
+        var href = window.location.href;
+        this.id = href.substring(href.lastIndexOf('?type=') + 5, href.length); 
+        var str = this.id.toString();
+        if (str.search(/[^0-9]/) === -1) {
+          this.RequestObj.rankList = parseInt(this.id, 10) - 1;
+          this.getValueFn();
+        } else {
+          this.RequestObj.rankList = 0;
+          this.getValueFn();
+        }
 			},
 		});
 	</script>
